--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -112,3 +112,8 @@ background-color: color($colors, lighterGrey);
 .marginRight{
 margin-right: 5px;
 }
+
+.toolbar-title-md{
+  padding:0;
+  font-size:16px;
+}
